eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-system-api-deployment
  labels:
    app: bank-system-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-system-api
  template:
    metadata:
      labels:
        app: bank-system-api
    spec:
      containers:
        - name: bank-system-api
          image: 095420225348.dkr.ecr.eu-west-1.amazonaws.com/banksystem:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
