eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-system-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: "gapi.banksystemtest.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-system-api-service
                port:
                  number: 90
  tls:
    - hosts:
        - gapi.banksystemtest.com
      secretName: bank-system-gapi-cert
