eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-system-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.bank-system.org"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-system-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.bank-system.org
      secretName: bank-system-api-cert
